Refactor API handlers and update storage methods
- Changed main.go file to look better
- Added more DB functions that return team data
- Updated Swagger file
- Removed JWT from API and handlers
- Removed Slack Owner from config. Not needed at all
